samples/_failures_safe/1761322373_d83adc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87b7790f.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_87b7790f.c:157:9: error: expected ‘,’ or ‘;’ at end of input
  157 |         TokenType op = current->type
      |         ^~~~~~~~~
./samples/SAFE/__tmp_87b7790f.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87b7790f.c:157:9: error: expected declaration or statement at end of input
